--- a/index-START.html
+++ b/index-START.html
@@ -12,9 +12,15 @@
   </head>
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
-    <button onClick="startGame()">Start!</button>
+    <aside class="buttons">
+      <form>
+        <label for="name">Your Name:</label><br />
+        <input type="text" id="name" name="name" placeholder="John Doe" /><br />
+      </form>
+      <button class="start">Start!</button>
+    </aside>
 
-    <div class="game">
+    <main class="game">
       <div class="hole hole1">
         <div class="mole"></div>
       </div>
@@ -33,15 +39,18 @@
       <div class="hole hole6">
         <div class="mole"></div>
       </div>
-    </div>
+    </main>
 
     <script>
       const holes = document.querySelectorAll(".hole");
       const scoreBoard = document.querySelector(".score");
       const moles = document.querySelectorAll(".mole");
+      const nameInput = document.querySelector("#name");
+      const startBtn = document.querySelector(".start");
       let lastHole;
       let timeUp = false;
       let score = 0;
+      let name;
 
       function randomTime(min, max) {
         return Math.round(Math.random() * (max - min) - min);
@@ -72,7 +81,7 @@
         timeUp = false;
         score = 0;
         peep();
-        setTimeout(() => (timeUp = true), 2000);
+        setTimeout(() => (timeUp = true), 4000);
       }
 
       function bonk(e) {
@@ -83,6 +92,12 @@
       }
 
       moles.forEach((mole) => mole.addEventListener("click", bonk));
+
+      startBtn.addEventListener("click", () => {
+        name = nameInput.value;
+        console.log(name);
+        startGame();
+      });
     </script>
   </body>
 </html>
