--- a/index-START.html
+++ b/index-START.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
     <aside class="buttons">
-      <form>
+      <form class="name-form">
         <label for="name">Your Name:</label><br />
         <input type="text" id="name" name="name" placeholder="John Doe" /><br />
       </form>
