--- a/index-START.html
+++ b/index-START.html
@@ -114,6 +114,7 @@
             (timeUp = true), addUserToHighscore();
             mouseActive = false;
             alertUser();
+            nameInput.value = "";
           }, 4000);
         } else {
           nameInput.classList.add("required");
@@ -155,12 +156,9 @@
         user["name"] = name;
         user["points"] = score;
         highscore.push(user); // when the game ends it will push the name and score to highscore array
-        let li = document.createElement("li");
-        highscoreList.appendChild(li);
-        `${user.points}` == 1
-          ? (li.innerHTML += `${user.name} - ${user.points} point`)
-          : (li.innerHTML += `${user.name} - ${user.points} points`);
         localStorage.setItem("highscore", JSON.stringify(highscore)); // saves new list to local storage
+        highscoreList.querySelectorAll("*").forEach((item) => item.remove()); // deletes all li from list
+        populateList(); // adds back all items - sorted and just top 5
       }
 
       // Starts the game
@@ -193,9 +191,17 @@
           }, 70);
         }
       });
+      //sort items from lower to higher
+      function compare(a, b) {
+        if (a.points > b.points) return -1;
+        if (b.points > a.points) return 1;
+        return 0;
+      }
       // Populate HighscoreList from local storage
       function populateList() {
-        highscore.forEach(function (user) {
+        highscore.sort(compare);
+        const topFive = highscore.slice(0, 5);
+        topFive.forEach(function (user) {
           let li = document.createElement("li");
           highscoreList.appendChild(li);
           `${user.points}` == 1
