Styled time left

--- a/index-START.html
+++ b/index-START.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
+    <div class="time-left-wrap">Time left:<span class="time-left"></span></div>
     <aside class="buttons">
       <form class="name-form">
         <label for="name">Your Name:</label><br />
@@ -28,9 +29,6 @@
       <button class="highscore-btn">
         View Highscore
       </button>
-      <div class="time-left-wrap">
-        Time left:<span class="time-left"></span>
-      </div>
     </aside>
 
     <main class="game">
